[package]
name    = "daq"
version = "0.0.1"
authors = ["Dmitry Ponyatov <dponyatov@gmail.com>"]

[dependencies]
# program initialization at startup and exit
static_init = "1.0"
# FFI interface with standard libc required for any system tool
libc = "0.2"

# \ telemetry
# logging mostly used in any program runs in batch or manual
# log = "0.4"
# structured logging
tracing = "0.1"
tracing-subscriber = "0.2"
# / telemetry

# \ hw
# detect the number of CPU/cores on the current machine
num_cpus = "1.13"
raw-cpuid = "10.2"
# / hw

# \ dsp
ux = "0.1"
signalo = "0.6"
# / dsp
